5.0.0
- Added immediately browser output to the output choices.
- Change: Removed deprecated code.
- Change: Drop PHP 7.0 support
- Change: Streamlined the type display of strings
- Change: Defined visibility for all constants.
- Change: Added missing PHP 7.1 return type to methods.
- Change: Moved the ViewConstInterface to the translations.
- Change: Moved the local declaration retrieval methods into
  their own API.

4.1.3
- Added microtime analysis to the float routing.
- Added microtime analysis to the string scalar analysis.
- Added type hint to the additional data for the first
  element.
- Updated to PHP 8.1
- Change: Code cleanup.
- Bugfix: Display info about public properties in predeclared
  classes.
- Bugfix: Comment inheritance resolving works more reliable.
- Bugfix: Method return type comment parsing works more
  reliable.
- Bugfix: Loading of the configuration file works again.

4.1.2
- Change: Do not display an empty array, when there are no
  attributes in the XML analysis.
- Bugfix: Add additional error handling to the file service
  to get by with high traffic sites (Please, never debug a
  productive site. At least make sure that the logger can
  only get triggered by the dev.).
- Bugfix: Applied sorting to the list of getter methods.
- Bugfix: Make better use of the recursion detection for
  the XML analysis.
- Bugfix: Fixed / updated the doc comments.
- Bugfix: Object recursions in the "$this protected" context
  can not generate source code.

4.1.1
- Change: Code cleanup.
- Bugfix: Predefined objects do not get their properties
  analysed.
- Bugfix: Display the DateTime anomaly "public" properties.

4.1.0
- Added a log model to use for a logger implementation.
- Added .min. support for css files.
- Added apostrophes around string array keys to the SmokyGrey
  skin for better readability.
- Added support for a JSON configuration file.
- Added PHP 8.0 support.
- Allow plugins to register their own settings.