@@ -116,3 +116,4 @@ metaContent = "Content"
 metaTimestamp = "Timestamp"
 metaReturnType = "Return type"
 metaNoXml = "Unable to decode the XML structure!"
+metaDefaultValue = "Default value"
